# docs

./: pyproject.toml  readme.md
.github/workflows/: lint-docs.yml  publish-docs.yml
docs/source/: architecture.rst  conf.py  development.rst  documentation.rst  index.rst
