[tool.poetry]
name = "cytomining-docs"
version = "0.0.1"
description = "Documentation for Cytomining Github organization to guide development and usage of related projects."
authors = ["Your Name <you@example.com>"]
license = "BSD 3-Clause"

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = "^5.1.1"
sphinxcontrib-mermaid = "^0.7.1"

[tool.poetry.dev-dependencies]
sphinx-lint = "^0.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
